--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
     <script>
-        window.location.href = "/dist"
+        window.location.href = "dist/"
     </script>
 </head>
 <body>
